WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151307
[css-grid] Fix alignment with gutters and negative free spaces
https://bugs.webkit.org/show_bug.cgi?id=151307
Summary
[css-grid] Fix alignment with gutters and negative free spaces
Sergio Villar Senin
Reported
2015-11-16 05:15:47 PST
[css-grid] Fix alignment with gutters and negative free spaces
Attachments
Patch
(8.93 KB, patch)
2015-11-16 05:24 PST
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2015-11-16 05:24:32 PST
Created
attachment 265584
[details]
Patch
WebKit Commit Bot
Comment 2
2015-11-17 02:11:47 PST
Comment on
attachment 265584
[details]
Patch Clearing flags on attachment: 265584 Committed
r192512
: <
http://trac.webkit.org/changeset/192512
>
WebKit Commit Bot
Comment 3
2015-11-17 02:11:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug