[css-grid] Fix alignment with gutters and negative free spaces https://bugs.webkit.org/show_bug.cgi?id=151307

Reviewed by Zalan Bujtas.

Source/WebCore:

This is a regression caused by r192154. The problem was that
the free space was not properly computed when the grid
container was narrower than the track sizes + gutters size for
a given axis. The culprit was an unneeded clamp to 0 which was
polluting the freeSpace computation as the track sizing
algorithm works perfectly OK with negative freeSpace values.

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::computeTrackSizesForDirection):

LayoutTests:

* fast/css-grid-layout/grid-gutters-and-alignment-expected.txt:
* fast/css-grid-layout/grid-gutters-and-alignment.html:


Canonical link: https://commits.webkit.org/169500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192512 268f45cc-cd09-0410-ab3c-d52691b4dbfc